--- a/inventories/do/inventory.yaml
+++ b/inventories/do/inventory.yaml
@@ -1,6 +1,6 @@
 # Using keyed groups and compose for hostvars
 plugin: community.digitalocean.digitalocean
-api_token: '{{ lookup("pipe", "./get-do-token.sh" }}'
+#api_token: '{{ lookup("pipe", "./get-do-token.sh" }}'
 attributes:
   - id
   - name
