--- a/inventories/do/digitalocean.yaml
+++ b/inventories/do/digitalocean.yaml
@@ -1,6 +1,6 @@
 # Using keyed groups and compose for hostvars
 plugin: community.digitalocean.digitalocean
-api_token: '{{ lookup(env, "DO_API_TOKEN") }}'
+api_token: '{{ lookup("env", "DO_API_TOKEN") }}'
 attributes:
   - id
   - name
